resolved i18n for multilple langues added swagger in i18n for user module changed user module on api
